fixed z-index issue in header (results overlap)

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -26,6 +26,7 @@ header {
     padding: 1rem;
     position: fixed;
     width: 100%;
+    z-index: 10;
 }
 
 #form {
